chore: Update CSS styles and fix layout issues on home page

--- a/mywebsite/src/assets/css/components/navbar.css
+++ b/mywebsite/src/assets/css/components/navbar.css
@@ -7,6 +7,7 @@
     z-index: 3;
     transition: height 0.3s ease, padding 0.3s ease;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    min-width: 600px;
 }
 #nav .nav_content {
     margin: 0 auto;
