--- a/mywebsite/src/assets/css/pages/home.css
+++ b/mywebsite/src/assets/css/pages/home.css
@@ -15,8 +15,9 @@
     color: rgb(79, 75, 90);
 }
 
-#intro h2{
-    margin:0px;
+#intro h4{
+    font-size: 25px;
+    margin: 0;
 }
 
 #intro .img_container {
