--- a/mywebsite/src/assets/css/pages/projects.css
+++ b/mywebsite/src/assets/css/pages/projects.css
@@ -11,26 +11,53 @@
     font-style: italic;
 }
 
-#projects h2 {
-    text-align: left;
-}
-
 #projects h3 {
-    text-align: left;
+    text-align: center;
     margin-left: 20px;
 }
 
 #project {
-    margin: 0;
+    margin: 20px 0px;
     display: block;
-    padding: 0px;
+    padding: 30px;
     height: auto;
+    max-width: none;
+    border: 0.5px solid black;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+#project .top-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: auto;
+    text-align: left;
     max-width: none;
 }
 
-#project h4 {
+#project .top-row h4 {
     text-align: left;
     margin: 0;
+    margin-bottom: 20px;
+    position: relative;
+}
+
+#project .top-row .github_container {
+    text-align: right;
+    width:40px;
+    height: auto;
+}
+
+#project .top-row .github_container img {
+    width: 100%;
+    height: auto;
+    border-radius: 20px;
+}
+
+#project .top-row .github_container img:hover {
+    transform: scale(1.05);
+    transition: transform 0.3s ease;
 }
 
 #project .content {
@@ -40,6 +67,8 @@
     height: auto;
     text-align: left;
     max-width: none;
+    margin-top: 0px;
+    margin-bottom: 25px;
 }
 
 #project .description {
